// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CollapsiblePanelHeader/> custom properties 1`] = `
<div>
  <div
    class="domain-panel-header domain-heading-collapsible domain-panel-header-collapsed"
    id="test-id"
  >
    <span
      class="domain-panel-status-icon domain-panel-status-icon-green"
    >
      <span
        class="fa fa-check-circle"
      />
    </span>
    <span
      class="domain-panel-title"
    >
      Test Prefix - Test Title
    </span>
    <span
      class="pull-right"
    >
      <span
        class="fa fa-lg fa-plus-square domain-form-expand-btn"
      />
    </span>
    <span
      class="domain-panel-header-fields-defined"
    >
      N Fields
    </span>
  </div>
</div>
`;

exports[`<CollapsiblePanelHeader/> default properties 1`] = `
<div>
  <div
    class="domain-panel-header domain-heading-collapsible domain-panel-header-collapsed"
    id="test-id"
  >
    <span
      class="domain-panel-title"
    >
      Test Title
    </span>
    <span
      class="pull-right"
    >
      <span
        class="fa fa-lg fa-plus-square domain-form-expand-btn"
      />
    </span>
  </div>
</div>
`;

exports[`<CollapsiblePanelHeader/> invalid, iconHelpMsg, and expanded 1`] = `
<div>
  <div
    class="domain-panel-header domain-heading-collapsible domain-panel-header-expanded labkey-page-nav"
    id="test-id"
  >
    <span
      class="domain-panel-status-icon"
    >
      <span
        class="fa fa-check-circle"
      />
    </span>
    <span
      class="domain-panel-title"
    >
      Test Title
    </span>
    <span
      class="pull-right"
    >
      <span
        class="fa fa-lg fa-minus-square domain-form-collapse-btn"
      />
    </span>
  </div>
</div>
`;

exports[`<CollapsiblePanelHeader/> not collapsible 1`] = `
<div>
  <div
    class="domain-panel-header domain-panel-header-expanded labkey-page-nav"
    id="test-id"
  >
    <span
      class="domain-panel-title"
    >
      Test Title
    </span>
  </div>
</div>
`;

exports[`<CollapsiblePanelHeader/> not controlledCollapse 1`] = `
<div>
  <div
    class="domain-panel-header domain-panel-header-collapsed"
    id="test-id"
  >
    <span
      class="domain-panel-status-icon domain-panel-status-icon-green"
    >
      <span
        class="fa fa-check-circle"
      />
    </span>
    <span
      class="domain-panel-title"
    >
      Test Title
    </span>
  </div>
</div>
`;

exports[`<CollapsiblePanelHeader/> panelStatus TODO and help tip 1`] = `
<div>
  <div
    class="domain-panel-header domain-heading-collapsible domain-panel-header-collapsed"
    id="test-id"
  >
    <span
      class="label-help-target"
    >
      <span
        class="domain-panel-status-icon domain-panel-status-icon-blue"
      >
        <span
          class="fa fa-exclamation-circle"
        />
      </span>
    </span>
    <span
      class="domain-panel-title"
    >
      Test Title
    </span>
    <span
      class="pull-right"
    >
      <span
        class="fa fa-lg fa-plus-square domain-form-expand-btn"
      />
    </span>
    <span
      class="label-help-target"
    >
      <span
        class="label-help-icon fa fa-question-circle"
      />
    </span>
  </div>
</div>
`;
